--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "my-app",
+  "name": "cryptoApp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.17.2",
     "axios": "^0.21.1",
+    "chart.js": "^3.6.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.9.1",
     "history": "^5.0.0",
-    "node-sass": "^5.0.0",
+    "html-react-parser": "^1.4.1",
+    "millify": "^4.0.0",
+    "moment": "^2.29.1",
     "plop": "^2.7.4",
     "react": "^17.0.1",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.1",
     "react-loadable": "^5.5.0",
     "react-redux": "^7.2.2",
@@ -20,6 +26,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.44.0",
     "secure-ls": "^1.2.6",
     "web-vitals": "^1.0.1"
   },
